force-app/main/default/objects/Exception_Log__e/Exception_Log__e.object-meta.xml
<CustomObject>
    <description>Platform event associated with exception recording. Captures information about exceptions even before they are rolled back, if applicable. W-014715</description>
    <label>Exception Log</label>
    <pluralLabel>Exception Logs</pluralLabel>
</CustomObject>