force-app/main/default/objects/Exception_Log__e/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object tyoe upon which the exception was thrown. W-014715</description>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>