force-app/main/default/objects/Exception_Log__e/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>The class or flow being executed when the exception was thrown. W-014715</description>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>