force-app/main/default/objects/Exception_Log__e/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The particular process being executed when the exception was thrown. W-014715</description>
    <inlineHelpText>The particular process being executed when the exception was thrown</inlineHelpText>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>