force-app/main/default/objects/Exception_Log__e/fields/Running_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Running_User_Id__c</fullName>
    <description>The Id of the user who was performing the operation when the exception was thrown. W-014075</description>
    <label>Running User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>